--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
+      <title>Phone shop</title>
 
       <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.11/dist/full.min.css" rel="stylesheet" type="text/css" />
       <script src="https://cdn.tailwindcss.com"></script>
@@ -16,43 +16,85 @@
       <header>
             <!-- nav bar  -->
 
-            <nav class=" container mx-auto">
-                  <div class="navbar bg-base-100">
-                        <div class="flex-1">
-                              <a class="btn btn-ghost text-xl">daisyUI</a>
-                        </div>
-                        <div class="flex-none gap-2">
-                              <div class="form-control">
-                                    <input type="text" placeholder="Search"
-                                          class="input input-bordered w-24 md:w-auto" />
+            <div class=" w-full sticky top-0">
+                  <nav class=" container mx-auto">
+                        <div class="navbar bg-base-100">
+                              <div class="flex-1">
+                                    <a class=" text-2xl font-bold">Phone Shop</a>
                               </div>
-                              <div class="dropdown dropdown-end">
-                                    <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-                                          <div class="w-10 rounded-full">
-                                                <img alt="Tailwind CSS Navbar component"
-                                                      src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
-                                          </div>
+                              <div class="flex-none gap-2">
+                                    <div class="form-control">
+                                          <input type="text" placeholder="Search"
+                                                class="input focus:outline-none input-bordered w-24 md:w-auto" />
                                     </div>
-                                    <ul tabindex="0"
-                                          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                                          <li>
-                                                <a class="justify-between">
-                                                      Profile
-                                                      <span class="badge">New</span>
-                                                </a>
-                                          </li>
-                                          <li><a>Settings</a></li>
-                                          <li><a>Logout</a></li>
-                                    </ul>
+                                    <div class="dropdown dropdown-end">
+                                          <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+                                                <div class="w-10 rounded-full">
+                                                      <img alt="Tailwind CSS Navbar component"
+                                                            src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                                                </div>
+                                          </div>
+                                          <ul tabindex="0"
+                                                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                                                <li>
+                                                      <a class="justify-between">
+                                                            Profile
+                                                            <span class="badge">New</span>
+                                                      </a>
+                                                </li>
+                                                <li><a>Settings</a></li>
+                                                <li><a>Logout</a></li>
+                                          </ul>
+                                    </div>
                               </div>
+                        </div>
+                  </nav>
+                  <div class="border border-gray-200"></div>
+            </div>
+            <!-- hero section  -->
+
+            <section class=" container mx-auto mt-16">
+                  <div
+                        class=" flex flex-col-reverse gap-6 lg:flex-row lg:w-11/12 mx-auto xl:w-full justify-between items-center">
+                        <!-- text part  -->
+                        <div class=" flex  flex-col gap-8 w-11/12 lg:w-5/12">
+                              <h1 class=" text-4xl md:text-5xl font-bold">Iphone 15 plus</h1>
+
+
+                              <!-- descrip tion -->
+                              <div class=" flex flex-col gap-4 text-lg">
+                                    <h3 class=" font-semibold text-2xl">Features</h3>
+                                    <p>15.5 cm (6.1") durable colour-infused glass and aluminium design footnote ◊ with
+                                          Ceramic Shield front</p>
+                                    <div class="border border-gray-200"></div>
+                                    <p>Dynamic Island bubbles up alerts and Live Activities — so you don’t miss them
+                                          while
+                                          you’re doing something else</p>
+                                    <div class="border border-gray-200"></div>
+                                    <p>48MP Main camera with 2x Telephoto captures breathtaking detail up close or far
+                                          away
+                                    </p>
+                                    <div class="border border-gray-200"></div>
+                                    <p>A16 Bionic powers computational photography and smooth gaming performance with
+                                          great
+                                          efficiency for all-day battery life</p>
+                                    <div class="border border-gray-200"></div>
+                                    <p>Connect and charge with USB-C</p>
+                              </div>
+                        </div>
+                        <!-- image part  -->
+                        <div>
+                              <img class="w-full" src="./assets/header phone.png" alt="">
                         </div>
                   </div>
-            </nav>
+            </section>
 
       </header>
       <!-- main section  -->
       <main>
+            <section>
 
+            </section>
       </main>
       <!-- footer section  -->
       <footer>
