--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
       </header>
       <!-- main section  -->
       <main>
+            <!-- display mobile section  -->
             <section class=" container mx-auto">
 
             </section>
