--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
       <main>
             <!-- display mobile section  -->
             <section class=" container mx-auto">
+                  <!-- mobile cards -->
+                  <div>
 
+                  </div>
             </section>
       </main>
       <!-- footer section  -->
