--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
                   &:hover {
                         filter: drop-shadow(5px 10px 5px rgba(0, 0, 0, 0.397));
-
-                        transform: scale(1.5) rotate(-5deg);
+                        transform: scale(1.6) rotate(-5deg);
 
                   }
 
@@ -109,9 +108,11 @@
       <!-- main section  -->
       <main>
             <!-- display mobile section  -->
-            <section class=" container mx-auto">
+            <section class=" container mx-auto mt-24">
                   <!-- mobile cards -->
-                  <div>
+                  <div class=" grid grid-cols-4 gap-4" id="cards">
+
+
 
                   </div>
             </section>
@@ -120,6 +121,10 @@
       <footer>
 
       </footer>
+
+
+      <!-- java script  -->
+      <script src="./script.js"></script>
 </body>
 
 </html>
