search velidation chack

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                   transition-timing-function: ease;
 
                   &:hover {
-                        filter: drop-shadow(5px 10px 5px rgba(0, 0, 0, 0.397));
-                        transform: scale(1.6) rotate(-5deg);
+                        filter: drop-shadow(5px 10px 10px rgba(0, 0, 0, 0.397));
+                        /* transform: scale(1.25) rotate(-5deg); */
 
                   }
 
