--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
                   transition-timing-function: ease;
 
                   &:hover {
-                        filter: drop-shadow(5px 10px 10px rgba(0, 0, 0, 0.397));
-                        /* transform: scale(1.25) rotate(-5deg); */
-
+                        /* filter: drop-shadow(4px 10px 10px rgba(0, 0, 0, 0.39)); */
+                        transform: scale(1.5) rotate(-5deg);
                   }
 
 
@@ -110,7 +109,7 @@
             <!-- display mobile section  -->
             <section class=" container mx-auto mt-24">
                   <!-- mobile cards -->
-                  <div class=" grid grid-cols-4 gap-6" id="cards">
+                  <div class=" grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6" id="cards">
 
 
 
