phone detels added

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
             </section>
 
       </header>
+      <!-- Open the modal using ID.showModal() method -->
+
+      <div id="modalCont">
+
+      </div>
       <!-- main section  -->
       <main>
             <!-- display mobile section  -->
