--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
 
                   </div>
             </section>
+            <div class=" flex justify-center mt-8">
+                  <button id="sowAllBtn" class=" btn border-2 border-gray-300">Sow all...</button>
+            </div>
       </main>
       <!-- footer section  -->
       <footer class=" mt-14">
